Add decompile option